# Excalibur

./: .gitignore  CMakeLists.txt  README.md  generate_data.cpp  main.cpp  trial.py
assets/: result_csv.md
docker/: Dockerfile  requirements.txt
include/: base.hpp  bbtsvd.hpp  client.hpp  utils.hpp
python/: collect_logs.py  get_stat.py
src/: bbtsvd.cpp  client.cpp  utils.cpp
